Comparing $all and $elemMatchOperators.txt
Products> db.comments.find({'comments.user':{$all: ['Alice','Vinod']}})
[
  {
    _id: 7,
    title: 'Introduction to MongoDB',
    content: 'MongoDB is a popular NoSQL database...',
    author: 'Vinod Thapa',
    comments: [
      { user: 'Alice', text: 'Awesome article!' },
      { user: 'Vinod', text: 'Thanks for sharing.' }
    ],
    metadata: { views: 1000, likes: 70 }
  }
]
Products> db.comments.find({'comments':{$elemMatch: ['user':'Alice' ,'text':'Awesome article!']}})
Uncaught:
SyntaxError: Unexpected token, expected "," (1:49)

> 1 | db.comments.find({'comments':{$elemMatch: ['user':'Alice' ,'text':'Awesome article!']}})
    |                                                  ^
  2 |

Products> db.comments.find({'comments':{$elemMatch: {'user':'Alice' ,'text':'Awesome article!'}}})
[
  {
    _id: 7,
    title: 'Introduction to MongoDB',
    content: 'MongoDB is a popular NoSQL database...',
    author: 'Vinod Thapa',
    comments: [
      { user: 'Alice', text: 'Awesome article!' },
      { user: 'Vinod', text: 'Thanks for sharing.' }
    ],
    metadata: { views: 1000, likes: 70 }
  }
]